--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -4,11 +4,11 @@
 put Sass variables here:
 eg $input-color: red;
 ****************************/
-@import '~bootswatch/dist/solar/variables';
+@import 'bootswatch/dist/solar/variables';
 // Override Bootstrap variables
 @import 'bootstrap-variables';
 // Import Bootstrap source files from node_modules
-@import '~bootstrap/scss/bootstrap';
-@import '~bootswatch/dist/solar/bootswatch';
+@import 'bootstrap/scss/bootstrap';
+@import 'bootswatch/dist/solar/bootswatch';
 
 /* jhipster-needle-scss-add-vendor JHipster will add new css style */
